# aimx

./: .gitignore  AGENTS.md  CONSTITUTION.md  README.md  TODO.md  pyproject.toml
.codex/: hooks.json
.github/workflows/: CI.yaml  publish.yaml
skills/aimx/: SKILL.md
skills/aimx/references/: aimx-cli.md
specs/001-aim-command-passthrough/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-aim-command-passthrough/checklists/: requirements.md
specs/001-aim-command-passthrough/contracts/: cli-contract.md
specs/002-aim-query-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-query-images-terminal-render/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-run-params-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-distribution-trace-visual/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/aimx/: __main__.py  cli.py  router.py
tests/: conftest.py
tests/contract/: test_cli_contract.py  test_query_contract.py  test_trace_contract.py
tests/integration/: conftest.py  test_missing_native_aim.py  test_missing_python_aim_package.py  test_passthrough_behavior.py  test_query_command.py  test_short_hash_and_steps.py  test_trace_command.py
tests/unit/: test_hash_resolver.py  test_image_render.py  test_locator.py  test_metric_stats.py  test_owned_commands.py  test_query_helpers.py  test_router.py  test_run_params.py  test_step_filter.py  test_trace_distribution_views.py  test_trace_helpers.py
(+25 files in other folders)
