[project]
name = "aimx"
version = "0.3.3"
description = "A safe CLI-first companion for native Aim"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24",
    "plotext>=5.3",
    "rich>=13.7",
    "textual-image>=0.12.0",
]

[project.scripts]
aimx = "aimx.__main__:main"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "aim>=3.29.1",
    "pytest>=8.3.5",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
